tests/script/negative/typecheck/shadow-global-helper-argument.s
global bool f = true;

@initial
go() {
  foo(f);
  terminate();
}

foo(bool f) {
  !f;
}
